--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "echo 'Build dependencies installed'"
   },
   "dependencies": {
     "next": "15.4.6",
